--- a/index.html
+++ b/index.html
@@ -3,13 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Victory</title>
-  <meta name="description" content="A collection of composable React components for building interactive data visualizations.">
-  <meta property="og:site_name" content="Victory" />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="http://www.formidable.com/open-source/victory/" />
-  <meta property="og:image" content="./static/og-image.png" />
-  <meta property="og:description" content="A collection of composable React components for building interactive data visualizations." />
+  <title>Formidable Charts</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="./static/favicon.ico" type="image/x-icon">
   <base href="/" />
@@ -20,7 +14,6 @@
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/codemirror/5.0.0/codemirror.min.css"/>
 </head>
 <body>
-  <!-- // TODO: UPDATE_FOR_CHARTS -->
   <div id="content">
     <p style="text-align: center;">Oops! Something is broken or JavaScript is not enabled.</p>
   </div>
